crates/store/dl_dataframe/src/snapshots/dl_dataframe__query__tests__query_static_any_values.snap
---
source: crates/store/dl_dataframe/src/query.rs
expression: DisplayRB(dataframe)
---
┌────────────────────┬────────────────────┬────────────────────┐
│ /test:baz          ┆ /test:foo          ┆ /test:yak          │
│ ---                ┆ ---                ┆ ---                │
│ type: List(UInt32) ┆ type: List(Utf8)   ┆ type: List(Utf8)   │
│ component: baz     ┆ component: foo     ┆ component: yak     │
│ entity_path: /test ┆ entity_path: /test ┆ entity_path: /test │
│ is_static: true    ┆ is_static: true    ┆ is_static: true    │
│ kind: data         ┆ kind: data         ┆ kind: data         │
╞════════════════════╪════════════════════╪════════════════════╡
│ [42]               ┆ [bar]              ┆ [yuk]              │
└────────────────────┴────────────────────┴────────────────────┘
