crates/store/dl_dataframe/src/snapshots/dl_dataframe__query__tests__selection-3.snap
---
source: crates/store/dl_dataframe/src/query.rs
expression: DisplayRB(dataframe)
---
┌──────────────────────────────┬──────────────────────────────┬──────────────────────────────┬──────────────────────────────┬──────────────────────────────┬──────────────────────────────┐
│ /this/that:example.MyPoints: ┆ /this/that:example.MyPoints: ┆ /non_existing_entity:example ┆ /this/that:MyPoints:AFieldTh ┆ /this/that:AFieldThatDoesntE ┆ /this/that:AArchetypeNameTha │
│ points                       ┆ points                       ┆ .MyPoints:points             ┆ atDoesntExist                ┆ xist                         ┆ tDoesNotExist:positions      │
│ ---                          ┆ ---                          ┆ ---                          ┆ ---                          ┆ ---                          ┆ ---                          │
│ type: List(Struct("x":       ┆ type: List(Struct("x":       ┆ type: Null                   ┆ type: Null                   ┆ type: Null                   ┆ type: Null                   │
│ non-null Float32, "y":       ┆ non-null Float32, "y":       ┆ component:                   ┆ component: MyPoints:AFieldTh ┆ component:                   ┆ component: AArchetypeNameTha │
│ non-null Float32))           ┆ non-null Float32))           ┆ example.MyPoints:points      ┆ atDoesntExist                ┆ AFieldThatDoesntExist        ┆ tDoesNotExist:positions      │
│ archetype: example.MyPoints  ┆ archetype: example.MyPoints  ┆ entity_path:                 ┆ entity_path: /this/that      ┆ entity_path: /this/that      ┆ entity_path: /this/that      │
│ component:                   ┆ component:                   ┆ /non_existing_entity         ┆ kind: data                   ┆ kind: data                   ┆ kind: data                   │
│ example.MyPoints:points      ┆ example.MyPoints:points      ┆ kind: data                   ┆                              ┆                              ┆                              │
│ component_type:              ┆ component_type:              ┆                              ┆                              ┆                              ┆                              │
│ example.MyPoint              ┆ example.MyPoint              ┆                              ┆                              ┆                              ┆                              │
│ entity_path: /this/that      ┆ entity_path: /this/that      ┆                              ┆                              ┆                              ┆                              │
│ kind: data                   ┆ kind: data                   ┆                              ┆                              ┆                              ┆                              │
╞══════════════════════════════╪══════════════════════════════╪══════════════════════════════╪══════════════════════════════╪══════════════════════════════╪══════════════════════════════╡
│ [{x: 0.0, y: 0.0}]           ┆ [{x: 0.0, y: 0.0}]           ┆ null                         ┆ null                         ┆ null                         ┆ null                         │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ [{x: 1.0, y: 1.0}]           ┆ [{x: 1.0, y: 1.0}]           ┆ null                         ┆ null                         ┆ null                         ┆ null                         │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ [{x: 2.0, y: 2.0}]           ┆ [{x: 2.0, y: 2.0}]           ┆ null                         ┆ null                         ┆ null                         ┆ null                         │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ [{x: 3.0, y: 3.0}]           ┆ [{x: 3.0, y: 3.0}]           ┆ null                         ┆ null                         ┆ null                         ┆ null                         │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ [{x: 4.0, y: 4.0}]           ┆ [{x: 4.0, y: 4.0}]           ┆ null                         ┆ null                         ┆ null                         ┆ null                         │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ [{x: 5.0, y: 5.0}]           ┆ [{x: 5.0, y: 5.0}]           ┆ null                         ┆ null                         ┆ null                         ┆ null                         │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ [{x: 8.0, y: 8.0}]           ┆ [{x: 8.0, y: 8.0}]           ┆ null                         ┆ null                         ┆ null                         ┆ null                         │
└──────────────────────────────┴──────────────────────────────┴──────────────────────────────┴──────────────────────────────┴──────────────────────────────┴──────────────────────────────┘
