crates/store/dl_dataframe/src/snapshots/dl_dataframe__query__tests__selection-4.snap
---
source: crates/store/dl_dataframe/src/query.rs
expression: DisplayRB(dataframe)
---
┌────────────────┬────────────────┬────────────────┬────────────────┬────────────────┬────────────────┬────────────────┬────────────────┬────────────────┬────────────────┬────────────────┐
│ frame_nr       ┆ frame_nr       ┆ frame_nr       ┆ frame_nr       ┆ frame_nr       ┆ frame_nr       ┆ frame_nr       ┆ frame_nr       ┆ frame_nr       ┆ frame_nr       ┆ /this/that:exa │
│ ---            ┆ ---            ┆ ---            ┆ ---            ┆ ---            ┆ ---            ┆ ---            ┆ ---            ┆ ---            ┆ ---            ┆ mple.MyPoints: │
│ type: Int64    ┆ type: Int64    ┆ type: Int64    ┆ type: Int64    ┆ type: Int64    ┆ type: Int64    ┆ type: Int64    ┆ type: Int64    ┆ type: Int64    ┆ type: Int64    ┆ labels         │
│ index_name:    ┆ index_name:    ┆ index_name:    ┆ index_name:    ┆ index_name:    ┆ index_name:    ┆ index_name:    ┆ index_name:    ┆ index_name:    ┆ index_name:    ┆ ---            │
│ frame_nr       ┆ frame_nr       ┆ frame_nr       ┆ frame_nr       ┆ frame_nr       ┆ frame_nr       ┆ frame_nr       ┆ frame_nr       ┆ frame_nr       ┆ frame_nr       ┆ type:          │
│ kind: index    ┆ kind: index    ┆ kind: index    ┆ kind: index    ┆ kind: index    ┆ kind: index    ┆ kind: index    ┆ kind: index    ┆ kind: index    ┆ kind: index    ┆ List(Utf8)     │
│                ┆                ┆                ┆                ┆                ┆                ┆                ┆                ┆                ┆                ┆ archetype: exa │
│                ┆                ┆                ┆                ┆                ┆                ┆                ┆                ┆                ┆                ┆ mple.MyPoints  │
│                ┆                ┆                ┆                ┆                ┆                ┆                ┆                ┆                ┆                ┆ component: exa │
│                ┆                ┆                ┆                ┆                ┆                ┆                ┆                ┆                ┆                ┆ mple.MyPoints: │
│                ┆                ┆                ┆                ┆                ┆                ┆                ┆                ┆                ┆                ┆ labels         │
│                ┆                ┆                ┆                ┆                ┆                ┆                ┆                ┆                ┆                ┆ component_type │
│                ┆                ┆                ┆                ┆                ┆                ┆                ┆                ┆                ┆                ┆ : example.MyLa │
│                ┆                ┆                ┆                ┆                ┆                ┆                ┆                ┆                ┆                ┆ bel            │
│                ┆                ┆                ┆                ┆                ┆                ┆                ┆                ┆                ┆                ┆ entity_path:   │
│                ┆                ┆                ┆                ┆                ┆                ┆                ┆                ┆                ┆                ┆ /this/that     │
│                ┆                ┆                ┆                ┆                ┆                ┆                ┆                ┆                ┆                ┆ is_static:     │
│                ┆                ┆                ┆                ┆                ┆                ┆                ┆                ┆                ┆                ┆ true           │
│                ┆                ┆                ┆                ┆                ┆                ┆                ┆                ┆                ┆                ┆ kind: data     │
╞════════════════╪════════════════╪════════════════╪════════════════╪════════════════╪════════════════╪════════════════╪════════════════╪════════════════╪════════════════╪════════════════╡
│ 10             ┆ 10             ┆ 10             ┆ 10             ┆ 10             ┆ 10             ┆ 10             ┆ 10             ┆ 10             ┆ 10             ┆ [c]            │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ 20             ┆ 20             ┆ 20             ┆ 20             ┆ 20             ┆ 20             ┆ 20             ┆ 20             ┆ 20             ┆ 20             ┆ [c]            │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ 30             ┆ 30             ┆ 30             ┆ 30             ┆ 30             ┆ 30             ┆ 30             ┆ 30             ┆ 30             ┆ 30             ┆ [c]            │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ 40             ┆ 40             ┆ 40             ┆ 40             ┆ 40             ┆ 40             ┆ 40             ┆ 40             ┆ 40             ┆ 40             ┆ [c]            │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ 50             ┆ 50             ┆ 50             ┆ 50             ┆ 50             ┆ 50             ┆ 50             ┆ 50             ┆ 50             ┆ 50             ┆ [c]            │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ 60             ┆ 60             ┆ 60             ┆ 60             ┆ 60             ┆ 60             ┆ 60             ┆ 60             ┆ 60             ┆ 60             ┆ [c]            │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ 70             ┆ 70             ┆ 70             ┆ 70             ┆ 70             ┆ 70             ┆ 70             ┆ 70             ┆ 70             ┆ 70             ┆ [c]            │
└────────────────┴────────────────┴────────────────┴────────────────┴────────────────┴────────────────┴────────────────┴────────────────┴────────────────┴────────────────┴────────────────┘
