crates/store/dl_dataframe/src/snapshots/dl_dataframe__query__tests__selection.snap
---
source: crates/store/dl_dataframe/src/query.rs
expression: DisplayRB(dataframe)
---
┌┐
╞╡
└┘
